--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
-PORT=5000
+PORT=3000
 MONGO_URI=mongodb+srv://ajinkyagajarmal:Ajinkya16@cluster0.go4ac.mongodb.net/Property_DB
 JWT_SECRET=your_jwt_secret_key_here
 JWT_LIFETIME=30d
-SMILEONE_UID=1041302
-SMILEONE_EMAIL=agent@smileone.com
-SMILEONE_KEY=7f663422060edd50b326b8a570639dac
-SMILEONE_BASE_URL=https://www.smile.one/ph    # or /br, /ru, etc.
+ 
+SMILEONE_API_KEY=8a03fb3afc7cb8342fcf954a44b2f0c8
+YOKCASH_API_KEY=APIH3MEDX1746109623999
+HOPESTORE_API_KEY=API9BX6XW1747642730999
+SMILEONE_EMAIL=pixelmoonstores@gmail.com
+SMILEONE_UID=2901028
+SMILEONE_SECRET=8a03fb3afc7cb8342fcf954a44b2f0c8
+SMILEONE_BASE_URL=https://www.smile.one/br/smilecoin/api
