--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
