--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ SMILEONE_EMAIL=pixelmoonstores@gmail.com
 SMILEONE_UID=2901028
 SMILEONE_SECRET=8a03fb3afc7cb8342fcf954a44b2f0c8
 SMILEONE_BASE_URL=https://www.smile.one/br/smilecoin/api
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=pixelmoonstores@gmail.com
+SMTP_PASS='G@ur@v@9899@#@'
+SMTP_FROM=pixelmoonstores@gmail.com
