--- a/.env
+++ b/.env
@@ -16,3 +16,9 @@ SMTP_SECURE=false
 SMTP_USER=pixelmoonstores@gmail.com
 SMTP_PASS='G@ur@v@9899@#@'
 SMTP_FROM=pixelmoonstores@gmail.com
+# PhonePe Configuration
+PHONEPE_MERCHANT_ID=TEST-M23F0NKGHBG0A_25060
+PHONEPE_SALT_KEY=MDljNDEzZTUtNTczYS00MDUyLWIzMDQtODBlN2MxMjM0Nzdk
+PHONEPE_BASE_URL=https://api-preprod.phonepe.com/apis/pg-sandbox
+PHONEPE_REDIRECT_URL=http://localhost:3000/wallet/payment-success
+PHONEPE_CALLBACK_URL=http://localhost:5000/api/wallet/phonepe-webhook
