--- a/.env
+++ b/.env
@@ -17,8 +17,11 @@ SMTP_USER=pixelmoonstores@gmail.com
 SMTP_PASS='G@ur@v@9899@#@'
 SMTP_FROM=pixelmoonstores@gmail.com
 # PhonePe Configuration
-PHONEPE_MERCHANT_ID=TEST-M23F0NKGHBG0A_25060
-PHONEPE_SALT_KEY=MDljNDEzZTUtNTczYS00MDUyLWIzMDQtODBlN2MxMjM0Nzdk
+PHONEPE_CLIENT_ID=TEST-M23F0NKGHBG0A_25060
+PHONEPE_CLIENT_SECRET=MDljNDEzZTUtNTczYS00MDUyLWIzMDQtODBlN2MxMjM0Nzdk
+PHONEPE_CLIENT_VERSION=1
 PHONEPE_BASE_URL=https://api-preprod.phonepe.com/apis/pg-sandbox
-PHONEPE_REDIRECT_URL=http://localhost:3000/wallet/payment-success
-PHONEPE_CALLBACK_URL=http://localhost:5000/api/wallet/phonepe-webhook
+PHONEPE_REDIRECT_URL=http://localhost:5173/wallet/payment-success
+PHONEPE_CALLBACK_URL=https://pixelmoonstore.in/api/wallet/phonepe-webhook
+PHONEPE_CALLBACK_USERNAME=Pixelmoon1234
+PHONEPE_CALLBACK_PASSWORD=Pixelmoon4321
